{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerMap",
            "id": "260b8aa3-c9d6-461b-8350-7f16ef07bbb5",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "9a87751f-9c88-42be-bcbc-5e28c7c63eac",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShootingBullets",
                    "type": "Button",
                    "id": "049e7adc-6494-4edf-9a64-77b15a9899ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootingLaser",
                    "type": "Button",
                    "id": "887b1aad-8981-4e16-b6b5-82a28483cbf0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "f616740f-ce7a-40e1-aa0c-0deb1b51f70d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d8846c3a-7d05-4cdd-9508-0ab28b147bd6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ba6b8488-33e4-4204-9c47-c8532fa2dce6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c3c15827-f90e-49bb-a80f-80e3e9c2a371",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "33ebce12-05b8-4df8-92aa-940204e0affe",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a3dea9c8-670e-4057-8ebb-b5b7022346a0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootingBullets",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c64d5df2-91dd-4609-8c5c-7b528ae3a051",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootingLaser",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}